--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
+    "@types/axios": "^0.9.36",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
